.github/lean_quality/fixtures/research_legacy_refs/negative/legacy/no-new-content.fixture
diff --git a/docs/aat/current.md b/docs/aat/current.md
+++ b/docs/aat/current.md
@@ -0,0 +1 @@
+Formal.AG.Research
